@@ -2,6 +2,8 @@
 date:
 	* version 0.4
 	* fixed saving of session
+	* fixed hints display when zooming in/out of a web page
+	* changed hintsize to 12px by default
 	* 'previewheight' setting to set the maximum size for the preview window
 	* showmode setting which shows the current mode in the command line (patch from Виктор Кожухаров)
 	* gh goes home :) gH in a new tab
